--- a/styles.css
+++ b/styles.css
@@ -22,3 +22,7 @@ a:visited {
 #dog-table {
 	background-image: url(background-image.jpg);
 }
+@media screen and (max-width: 800px) {
+  #content {
+    width: 100%;}
+  }
